# cuin_merged

./: .gitignore  Makefile  README.md  SPARK_ORCHESTRATOR_FIX_SUMMARY.md  architecture_diagram.puml  docker-compose.yml
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  challenging_er_200.csv  debug_bridge.py  debug_clustering.py  debug_kazi.py  debug_matching.py  main.py  pyproject.toml  requirements.txt
backend/agents/: planner_agent.py  referee_agent.py
backend/api/: __init__.py  config.py  db_init.py  main.py  routes_admin.py  routes_audit.py  routes_candidates.py  routes_config.py  routes_datasource.py  routes_graph.py  routes_matches.py  routes_metrics.py  routes_review.py  routes_runs.py  routes_upload.py  ws_events.py
backend/data/: Untitled spreadsheet.xlsx  challenging_er_200.csv  matched_records_original_20260129_164540 1 1.xlsx  referee_cache.jsonl  runs_index.json
backend/data/runs/: 018ecdea-7e42-4dd2-a981-92a9c98125c9_clusters.json  018ecdea-7e42-4dd2-a981-92a9c98125c9_records.json  01d492e6-d97d-4df0-876e-9fcc855713ab_clusters.json  01d492e6-d97d-4df0-876e-9fcc855713ab_records.json  047bb53e-c357-4c6c-97b5-7b4f1c84185a_clusters.json  047bb53e-c357-4c6c-97b5-7b4f1c84185a_records.json  04830c5c-834b-460a-aecb-cbaf462b3f52_clusters.json  04830c5c-834b-460a-aecb-cbaf462b3f52_records.json  1400943e-0678-4c46-80a6-ab015bfe7dfa_clusters.json  1400943e-0678-4c46-80a6-ab015bfe7dfa_records.json  24343685-eaba-42fc-ada7-6b026b3372dc_clusters.json  24343685-eaba-42fc-ada7-6b026b3372dc_records.json  26abcc95-33a5-4445-9139-89c90034d790_clusters.json  26abcc95-33a5-4445-9139-89c90034d790_records.json  31c6c301-9375-4a21-abdf-d4678e8fe5cc_clusters.json  31c6c301-9375-4a21-abdf-d4678e8fe5cc_records.json  3517b67a-a84b-439e-b18b-821c8e343164_clusters.json  3517b67a-a84b-439e-b18b-821c8e343164_records.json  3d4a34a1-0af6-4e28-bda5-4a082bbf2018_clusters.json  3d4a34a1-0af6-4e28-bda5-4a082bbf2018_records.json  3e511b8f-70c7-4b58-9545-1612aa809de9_clusters.json  3e511b8f-70c7-4b58-9545-1612aa809de9_records.json  54d01bb0-b91e-4fae-a879-40c82b355a69_clusters.json  54d01bb0-b91e-4fae-a879-40c82b355a69_records.json  5e28f443-53b8-478a-8791-a08605c68794_clusters.json  (+19 more)
backend/db/: schema.sql
backend/engine/: read_staging.py  structures.py
backend/pipeline/: __init__.py  orchestrator.py  spark_orchestrator.py
backend/policies/: policy_v1.yaml
backend/services/: __init__.py  audit.py  review_service.py  run_service.py
frontend/: Dockerfile  (+4 more)
(+92 files in other folders)
